Finished DDL and got all the tests correct